--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="main">
             <div class = "main_inside"> 
                 <nav> 
-                <a class = "main_link" onclick="setSize(10, 10, 1)">Новичок</a> 
+                <a class = "main_link" onclick="setSize(9, 9, 1)">Новичок</a> 
                 <a class = "main_link" onclick="setSize(16, 16, 2)">Любитель</a> 
                 <a class = "main_link" onclick="setSize(30, 16, 3)">Профессионал</a> 
                 </nav> 
@@ -205,4 +205,4 @@
 
 </body>
 
-</html>
+</html>>
