--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="main">
             <div class = "main_inside"> 
                 <nav> 
-                <a class = "main_link" onclick="setSize(9, 9, 1)">Новичок</a> 
-                <a class = "main_link" onclick="setSize(16, 16, 2)">Любитель</a> 
-                <a class = "main_link" onclick="setSize(30, 16, 3)">Профессионал</a> 
+                <a class = "main_link" type = "button" onclick="setSize(9, 9, 1)">Новичок</a> 
+                <a class = "main_link" type = "button" onclick="setSize(16, 16, 2)">Любитель</a> 
+                <a class = "main_link" type = "button" onclick="setSize(30, 16, 3)">Профессионал</a> 
                 </nav> 
             </div>
 
@@ -62,10 +62,18 @@
 
             id += sizeCode*10000;
 
-            let answer = 9;
+            let xhr = new XMLHttpRequest();
+            xhr.withCredentials = true;
+            xhr.open("GET", url + String(id));
+
+            xhr.send();
+
+            alert(xhr.response);
+
+            let answer = parseInt(xhr.responseText);
 
             for(let i = 0; i < varHeight; i++) {
-                for(let j=0; j < varWidth; j++) {
+                for(let j = 0; j < varWidth; j++) {
                     if(i*varWidth + j == answer) {
                         varBoard.push(0);
                     }
@@ -205,4 +213,4 @@
 
 </body>
 
-</html>>
+</html>
